# Process-Transcript-to-Notes

./: .gitignore  LICENS  README.md  anthropic_api.py  gpt_transcription_processor.py  hello.py  pyproject.toml
anthropic_api/: api_client.py  config.py  document_processor.py  main.py  rate_limiter.py  text_processor.py  tokenizer.py
openAI_api/: api_client.py  application.py  config.py  document_processor.py  file_manager.py  prompt_manager.py
